--- a/stroop-game-main/netlify.toml
+++ b/stroop-game-main/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   base = "stroop-game-main"
   publish = "out"
-  command = "npm install --legacy-peer-deps && npm run build && npm run export"
+  command = "npm install --legacy-peer-deps && npm run build"
 
 [[redirects]]
   from = "/*"
